tests/pos/i9052/B.scala
val UNone: UOption[Nothing] = ??? // error: Cyclic Reference involving UOption
